2008-06-02  Andreia Gaita <avidigal@novell.com> 

	* Page.cs, Main.cs: Add css, scrollbars tests
	* standalone.mdp: Fix mono.webbrowser reference
	* bin/test.html, DomInspector.cs: Add css tests
	* Makefile: Added

2008-05-22  Andreia Gaita <avidigal@novell.com> 

	* Main.cs: Generic event has been removed

2008-05-20  Andreia Gaita <avidigal@novell.com> 

	* Main.cs: Hook up page loading events

2008-05-08  Andreia Gaita <avidigal@novell.com> 

	* Page.cs, Main.cs: Added Style and TabIndex accessors
	* bin, bin/test.html: Test page set up to load by default in the app
	* DomInspector.cs: Added Style and TabIndex accessors in the dom menu

2008-04-23  Andreia Gaita <avidigal@novell.com> 

	* Page.cs, Main.cs: Add event firing test

2008-04-22  Andreia Gaita <avidigal@novell.com> 

	* Page.cs: Added methods for Invoking scripts, getting and setting
	  attributes
	* Main.cs: Status information

2008-04-22  Andreia Gaita <avidigal@novell.com> 

	* Main.cs: Test OuterHTML

2008-04-09  Andreia Gaita <avidigal@novell.com> 

	* Page.cs, Main.cs, DomInspector.cs: Add support to get/set OuterText,
	  OuterHTML, Attributes