@@ -1,5 +1,3 @@
-// THIS FILE AUTOMATICALLY GENERATED BY xpidl2cs.pl
-// EDITING IS PROBABLY UNWISE
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
 // "Software"), to deal in the Software without restriction, including
@@ -23,8 +21,7 @@
 //
 // Authors:
 //	Andreia Gaita (avidigal@novell.com)
-//
-//
+
 
 using System;
 using System.Windows.Forms;
@@ -40,6 +37,7 @@ namespace standalone
 		private IElementCollection elementCollection;
 		private IAttributeCollection attributeCollection;
 		private IStylesheetList stylesheetList;
+		private IWindowCollection windows;
 		ArrayList nodeList;
 		Page helper;
 		MainForm main;
@@ -75,6 +73,14 @@ namespace standalone
 			set {
 				stylesheetList = value;
 				RefreshCollectionTree3 ();
+			}
+		}
+
+		public IWindowCollection Windows {
+			get {return windows;}
+			set {
+				windows = value;
+				RefreshCollectionTree4 ();
 			}
 		}
 
@@ -351,6 +357,20 @@ namespace standalone
 				t.ContextMenu = popupmenu;
 			}
 		}			
-			
+
+		public void RefreshCollectionTree4 ()
+		{
+			nodeList.Clear ();
+			domTree.Nodes.Clear ();
+			TreeNodeCollection where = domTree.Nodes;
+			TreeNode t;
+			Console.Error.WriteLine (windows.Count);
+			foreach (IWindow child in windows) {
+				t = where.Add (nodeList.Count.ToString (), child.Name);
+				nodeList.Add (child);
+				t.ContextMenu = popupmenu;
+			}
+		}			
+
 	}
 }
