@@ -1,5 +1,3 @@
-// THIS FILE AUTOMATICALLY GENERATED BY xpidl2cs.pl
-// EDITING IS PROBABLY UNWISE
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
 // "Software"), to deal in the Software without restriction, including
@@ -23,7 +21,7 @@
 //
 // Authors:
 //	Andreia Gaita (avidigal@novell.com)
-//
+
 
 
 using System;
@@ -43,7 +41,7 @@ namespace standalone
 		}
 		
 		public MainForm ()
-		{		
+		{
 			helper = new Page (this);
 			gui ();
 			loadWebHost ();	
@@ -110,6 +108,13 @@ namespace standalone
 			updateInspector ();
 			if (!domInspector.Visible)
 				domInspector.Show ();
+		}
+	
+		private void openEventMonitor (object sender, EventArgs e) {
+			if (helper.lastNodeFetched == null)
+				return;
+			EventMonitor monitor = new EventMonitor(helper.lastNodeFetched);
+			monitor.Show ();
 		}
 
 		private void loadWebHost () 
@@ -184,6 +189,11 @@ namespace standalone
 				helper.document = webHost.Document;
 				updateInspector ();				
 			};
+			
+			webHost.SecurityChanged += delegate (object sender, Mono.WebBrowser.SecurityChangedEventArgs e) {
+				Console.Error.WriteLine ("securityChanged " + e.State);
+			};
+				
 		}
 
 
@@ -196,6 +206,7 @@ namespace standalone
 			menu = new MenuStrip ();
 
 			menu.Items.Add ("Dom Inspector", null, new EventHandler (openInspector));
+			menu.Items.Add ("Event Monitor", null, new EventHandler (openEventMonitor));
 			
 			ToolStripMenuItem menu1 = null;
 			ToolStripMenuItem menu2 = null;
@@ -205,13 +216,56 @@ namespace standalone
 			menu1 = new ToolStripMenuItem ("Browser");
 			menu.Items.Add (menu1);
 
-			menu2 = new ToolStripMenuItem ("Render data", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Render data", null, delegate {
 			//    webHost.OpenStream ("file:///", "text/html");
 			//    webHost.AppendToStream (body.Text);
 			//    webHost.CloseStream ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
+
+			menu2 = new ToolStripMenuItem ("Scrollbars");
+			menu1.DropDownItems.Add (menu2);
+
+			menu3 = new ToolStripMenuItem ("Enable", null, delegate {
+				helper.setScrollbars (true);
+			});
+			menu2.DropDownItems.Add (menu3);
+			
+			menu3 = new ToolStripMenuItem ("Disable", null, delegate {
+				helper.setScrollbars (false);
+			});
+			menu2.DropDownItems.Add (menu3);
+			
+			menu3 = new ToolStripMenuItem ("Get Value", null, delegate {
+				helper.getScrollbars ();
+			});
+			menu2.DropDownItems.Add (menu3);
+
+			menu2 = new ToolStripMenuItem ("RTL");
+			menu1.DropDownItems.Add (menu2);
+
+			menu3 = new ToolStripMenuItem ("Enable", null, delegate {
+				helper.RightToLeft = true;
+			});
+			menu2.DropDownItems.Add (menu3);
+			
+			menu3 = new ToolStripMenuItem ("Disable", null, delegate {
+				helper.RightToLeft = false;
+			});
+			menu2.DropDownItems.Add (menu3);
+			
+			menu3 = new ToolStripMenuItem ("Get Value", null, delegate {
+				bool a = helper.RightToLeft;
+			});
+			menu2.DropDownItems.Add (menu3);
+			
+			menu2 = new ToolStripMenuItem ("Windows", null, delegate {
+				helper.getWindows ();
+			});
+			menu1.DropDownItems.Add (menu2);
+			
+			/*** Document ***/
 			
 			menu1 = new ToolStripMenuItem ("Document");
 			menu.Items.Add (menu1);
@@ -222,7 +276,7 @@ namespace standalone
 			menutxt = new ToolStripTextBox ();
 			menu2.DropDownItems.Add (menutxt);
 
-			menu3 = new ToolStripMenuItem ("Get", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Get", null, delegate{
 				helper.getTitle ();
 			});
 			menu2.DropDownItems.Add (menu3);
@@ -233,17 +287,17 @@ namespace standalone
 			});			
 			menu2.DropDownItems.Add (menu3);
 			
-			menu2 = new ToolStripMenuItem ("Get DocumentElement", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Get DocumentElement", null, delegate {
 				helper.getDocumentElement ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Get Body", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Get Body", null, delegate  {
 				helper.getBody ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Get Active Element", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Get Active Element", null, delegate  {
 				helper.getActiveElement ();
 			});
 			menu1.DropDownItems.Add (menu2);
@@ -276,7 +330,7 @@ namespace standalone
 			menutxt = new ToolStripTextBox ();
 			menu2.DropDownItems.Add (menutxt);
 
-			menu3 = new ToolStripMenuItem ("Get", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Get", null, delegate {
 				helper.getCharset ();
 			});
 			menu2.DropDownItems.Add (menu3);
@@ -294,7 +348,7 @@ namespace standalone
 			menutxt = new ToolStripTextBox ();
 			menu2.DropDownItems.Add (menutxt);
 
-			menu3 = new ToolStripMenuItem ("Get", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Get", null, delegate {
 				helper.getCookie ();
 			});
 			menu2.DropDownItems.Add (menu3);
@@ -306,42 +360,42 @@ namespace standalone
 			menu2.DropDownItems.Add (menu3);
 
 
-			menu2 = new ToolStripMenuItem ("Attributes", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Attributes", null, delegate  {
 				helper.getAttributes ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Anchors", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Anchors", null, delegate  {
 				helper.getAnchors ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Applets", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Applets", null, delegate  {
 				helper.getApplets ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Forms", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Forms", null, delegate  {
 				helper.getForms ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Images", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Images", null, delegate  {
 				helper.getImages ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Links", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Links", null, delegate  {
 				helper.getLinks ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Stylesheets", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Stylesheets", null, delegate  {
 				helper.getStylesheets ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Url", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Url", null, delegate  {
 				helper.getUrl ();
 			});
 			menu1.DropDownItems.Add (menu2);
@@ -356,24 +410,6 @@ namespace standalone
 			menu3 = new ToolStripMenuItem ("Invoke", null, delegate(object sender, EventArgs e) {
 				body.AppendText (helper.invokeScript (((ToolStripTextBox) ((ToolStripMenuItem) ((ToolStripMenuItem) sender).OwnerItem).DropDownItems[0]).Text));
 			});
-			menu2.DropDownItems.Add (menu3);
-
-
-			menu2 = new ToolStripMenuItem ("Scrollbars");	
-			menu1.DropDownItems.Add (menu2);
-			
-			menutxt = new ToolStripTextBox ();
-			menu2.DropDownItems.Add (menutxt);
-
-			menu3 = new ToolStripMenuItem ("Get", null, delegate(object sender, EventArgs e) {
-				helper.getScrollbars ();
-			});
-			menu2.DropDownItems.Add (menu3);
-
-
-			menu3 = new ToolStripMenuItem ("Set", null, delegate(object sender, EventArgs e) {
-				helper.setScrollbars (((ToolStripTextBox)((ToolStripMenuItem)((ToolStripMenuItem)sender).OwnerItem).DropDownItems[0]).Text);
-			});			
 			menu2.DropDownItems.Add (menu3);
 			
 			
@@ -407,23 +443,23 @@ namespace standalone
 			menutxt = new ToolStripTextBox ();
 			menu2.DropDownItems.Add (menutxt);
 
-			menu2 = new ToolStripMenuItem ("Show Children", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Show Children", null, delegate  {
 				helper.getChildren ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
 
-			menu2 = new ToolStripMenuItem ("FirstChild", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("FirstChild", null, delegate  {
 				helper.getFirstChild ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("InnerHTML", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("InnerHTML", null, delegate  {
 				helper.getInnerHTML ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("InnerText", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("InnerText", null, delegate  {
 				helper.getInnerText ();
 			});
 			menu1.DropDownItems.Add (menu2);
@@ -431,27 +467,27 @@ namespace standalone
 			menu2 = new ToolStripMenuItem ("OuterHTML");
 			menu1.DropDownItems.Add (menu2);
 
-			menu3 = new ToolStripMenuItem ("Get", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Get", null, delegate {
 				helper.getOuterHTML ();
 			});			
 			menu2.DropDownItems.Add (menu3);
 
-			menu3 = new ToolStripMenuItem ("Set", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Set", null, delegate {
 				helper.setOuterHTML (body.Text);
 			});			
 			menu2.DropDownItems.Add (menu3);
 			
-			menu2 = new ToolStripMenuItem ("OuterText", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("OuterText", null, delegate  {
 				helper.getOuterText ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("LocalName", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("LocalName", null, delegate  {
 				helper.getLocalName ();
 			});
 			menu1.DropDownItems.Add (menu2);
 
-			menu2 = new ToolStripMenuItem ("Value", null, delegate (object sender, EventArgs e) {
+			menu2 = new ToolStripMenuItem ("Value", null, delegate  {
 				helper.getValue ();
 			});
 			menu1.DropDownItems.Add (menu2);
@@ -471,12 +507,12 @@ namespace standalone
 			menu2 = new ToolStripMenuItem ("Tab Index");
 			menu1.DropDownItems.Add (menu2);
 
-			menu3 = new ToolStripMenuItem ("Get", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Get", null, delegate {
 				helper.getTabIndex ();
 			});			
 			menu2.DropDownItems.Add (menu3);
 
-			menu3 = new ToolStripMenuItem ("Set", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Set", null, delegate {
 				helper.setTabIndex (body.Text);
 			});			
 			menu2.DropDownItems.Add (menu3);
@@ -485,12 +521,12 @@ namespace standalone
 			menu2 = new ToolStripMenuItem ("Style");
 			menu1.DropDownItems.Add (menu2);
 
-			menu3 = new ToolStripMenuItem ("Get", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Get", null, delegate {
 				helper.getStyle ();
 			});			
 			menu2.DropDownItems.Add (menu3);
 
-			menu3 = new ToolStripMenuItem ("Set", null, delegate(object sender, EventArgs e) {
+			menu3 = new ToolStripMenuItem ("Set", null, delegate {
 				helper.setStyle (body.Text);
 			});			
 			menu2.DropDownItems.Add (menu3);
@@ -514,14 +550,14 @@ namespace standalone
 			Button cmdGetOuterHtml = new Button ();
 			cmdGetOuterHtml.Text = "<";			
 			cmdGetOuterHtml.Size = new Size (30, 30);
-			cmdGetOuterHtml.Click += delegate (object sender, EventArgs e) {
+			cmdGetOuterHtml.Click += delegate  {
 				this.helper.getOuterHTML();
 			};
 
 			Button cmdSetOuterHtml = new Button ();
 			cmdSetOuterHtml.Text = "<";			
 			cmdSetOuterHtml.Size = new Size (30, 30);
-			cmdSetOuterHtml.Click += delegate (object sender, EventArgs e) {
+			cmdSetOuterHtml.Click += delegate  {
 				this.helper.setOuterHTML (this.body.Text);
 			};
 			
@@ -557,16 +593,16 @@ namespace standalone
 			control.Size = this.ClientSize;
 			this.Size = new Size (this.Width, this.Height - 150);
 			control.Anchor = (AnchorStyles) (AnchorStyles.Top | AnchorStyles.Left | AnchorStyles.Right| AnchorStyles.Bottom);
-			control.GotFocus += delegate (object sender, EventArgs e) {
+			control.GotFocus += delegate  {
 				Console.Error.WriteLine (" Control: GotFocus");
 				Console.Error.WriteLine (Environment.StackTrace);
 				webHost.FocusIn (FocusOption.FocusFirstElement);
 			};
-			control.LostFocus += delegate (object sender, EventArgs e) {
+			control.LostFocus += delegate  {
 				Console.Error.WriteLine (" Control: LostFocus");
 				webHost.FocusOut ();
 			};
-			control.VisibleChanged += delegate (object sender, EventArgs e) {
+			control.VisibleChanged += delegate  {
 				Console.Error.WriteLine (" Control: VisibleChanged");
 				if (webHost != null && control.Visible && !control.Disposing && !control.IsDisposed && loaded) {
 					webHost.Activate ();
@@ -577,7 +613,7 @@ namespace standalone
 			control.MouseClick += delegate (object sender, MouseEventArgs e) {
 				Console.Error.WriteLine (" Control: MouseClick");
 			};
-			control.Resize += delegate (object sender, EventArgs e) {
+			control.Resize += delegate  {
 				webHost.Resize (control.Width, control.Height);
 			};
 
