@@ -1,5 +1,3 @@
-// THIS FILE AUTOMATICALLY GENERATED BY xpidl2cs.pl
-// EDITING IS PROBABLY UNWISE
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
 // "Software"), to deal in the Software without restriction, including
@@ -23,7 +21,7 @@
 //
 // Authors:
 //	Andreia Gaita (avidigal@novell.com)
-//
+
 
 
 using System;
@@ -46,6 +44,7 @@ namespace standalone
 		public delegate void ElementCollectionChangedHandler ();
 		public delegate void AttributeCollectionChangedHandler ();
 		public delegate void StylesheetListChangedHandler ();
+		public delegate void WindowCollectionChangedHandler ();
 		
 		public INode lastNodeFetched;
 		public IDocument document;
@@ -84,6 +83,16 @@ namespace standalone
 				OnStylesheetListChanged ();
 			}
 		}
+		
+		public IWindowCollection windows;
+		public IWindowCollection Windows {
+			get {return windows;}
+			set {
+				windows = value;
+				OnWindowCollectionChanged ();
+			}
+		}
+
 		public string retVal;
 		
 		public event TextChangedHandler TextChanged;
@@ -116,8 +125,21 @@ namespace standalone
 			if (StylesheetListChanged != null)
 				StylesheetListChanged ();
 		}		
+		
+		public event WindowCollectionChangedHandler WindowCollectionChanged;
+		public void OnWindowCollectionChanged() {
+			if (WindowCollectionChanged != null)
+				WindowCollectionChanged ();
+		}		
+
+		
 		// document
 		
+		public void getWindows () {
+			if (document == null) return;
+			Windows = document.Window.Frames;
+		}
+
 		public void getDocumentElement () {
 			if (document == null) return;
 			lastNodeFetched = document.DocumentElement;
@@ -221,15 +243,40 @@ namespace standalone
 		}
 
 		public void getScrollbars() {
-			retVal = parent.webHost.ScrollbarsEnabled ? "true" : "false";
+			retVal = document.InvokeScript ("document.body.style.overflow != 'hidden';") ;
 			OnTextChanged (retVal);
 		}
 		
-		public void setScrollbars (string enabled) {
-			Console.Error.WriteLine (enabled);
-			parent.webHost.ScrollbarsEnabled = (enabled == "true" ? true : false);
+		public void setScrollbars (bool enabled) {
+			if (!enabled)
+				document.InvokeScript ("document.body.style.overflow='hidden';");
+			else
+				document.InvokeScript ("document.body.style.overflow='auto';");
 		}
 
+		
+		public bool RightToLeft {
+			get { 
+				if (document == null) return false;
+				IAttribute dir = document.Attributes["dir"];
+				retVal = (dir != null && dir.Value == "rtl") ? "true" : "false";
+				OnTextChanged (retVal);
+				return retVal == "true";
+			}
+			set {
+				if (document == null) return;
+				IAttribute dir = document.Attributes["dir"];
+				if (dir == null && value) {
+					IAttribute attr = document.CreateAttribute ("dir");
+					attr.Value = "rtl";
+					document.AppendChild (attr);
+				} else if (dir != null && !value) {
+					document.RemoveChild (dir);
+				}
+			}
+		}	
+		
+		
 		// Element
 		
 		
