@@ -26,4 +26,7 @@ body {
 </div>
 
 <p style="padding: 0; border: solid 1px black;">a paragraph with the following style: padding: 0; border: solid 1px black;</p>
+
+<a href="#" onclick="document.body.style.overflow='hidden'">Hide scrollbars</a>
+<a href="#" onclick="javascript:document.body.style.overflow='auto'">Show scrollbars</a>
 </body></html>
