@@ -1,5 +1,5 @@
 <Project name="standalone" fileversion="2.0" language="C#" clr-version="Net_2_0" ctype="DotNetProject">
-  <Configurations active="Debug">
+  <Configurations active="net_2_0">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
       <Output directory="bin" assembly="standalone" />
       <Build debugmode="True" target="Exe" />
@@ -20,11 +20,21 @@
     <File name="ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="Makefile" subtype="Code" buildaction="Nothing" />
     <File name="bin/test.html" subtype="Code" buildaction="Nothing" />
+    <File name="EventMonitor.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <ProjectReference type="Project" localcopy="False" refto="Mono.WebBrowser" />
+    <ProjectReference type="Gac" localcopy="True" refto="Mono.WebBrowser, Version=0.4.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
   </References>
+  <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="Makefile">
+    <BuildFilesVar Sync="True" Name="STANDALONE_SRC" />
+    <DeployFilesVar />
+    <ResourcesVar />
+    <OthersVar />
+    <GacRefVar />
+    <AsmRefVar />
+    <ProjectRefVar />
+  </MonoDevelop.Autotools.MakefileInfo>
 </Project>
